--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           <div class="row mt-5 justify-content-between">
             <div class="col-lg-7 mb-5 mb-lg-0">
               <figure class="dotted-bg gsap-reveal-img ">
-                <img src="images/logo.jpg" alt="Image" class="img-fluid">
+                <img src="images/logo.JPG" alt="Image" class="img-fluid">
               </figure>
             </div>
             <div class="col-lg-4 pr-lg-5">
@@ -497,7 +497,7 @@
                     <h3>Don Rossi Argentine Beef</h3>
                   </div>
                 </div>
-                <img src="images/donrossi.jpg" class="lazyload" alt="Image" />
+                <img src="images/donrossi.JPG" class="lazyload" alt="Image" />
               </a>
 
 
