--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
             <div id="posts" class="row gutter-isotope-item">
               <div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-                <a href="images/carne.jfif" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img" data-id="1">
+                <a href="images/carne.jfif" class="portfolio-item isotope-item gsap-reveal-img" data-fancybox="gallery" data-id="1">
                     <div class="overlay">
                       <span class="wrap-icon icon-link2"></span>
                       <div class="portfolio-item-content">
@@ -181,7 +181,7 @@
                   </a>
               </div>
               <div class="item branding packaging illustration col-sm-6 col-md-6 col-lg-4 isotope-mb-2 ">
-                <a href="images/mate.jpeg" class="portfolio-item ajax-load-page item-portrait isotope-item gsap-reveal-img" data-id="3">
+                <a href="images/mate.jpeg" class="portfolio-item item-portrait isotope-item gsap-reveal-img" data-fancybox="gallery" data-id="3">
                     <div class="overlay">
                       <span class="wrap-icon icon-link2"></span>
                       <div class="portfolio-item-content">
@@ -194,7 +194,7 @@
               </div>
 
               <div class="item branding packaging col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-                <a href="images/maradona2.jpg" class="portfolio-item isotope-item gsap-reveal-img ajax-load-page" data-id="4">
+                <a href="images/maradona2.jpg" class="portfolio-item isotope-item gsap-reveal-img" data-fancybox="gallery" data-id="4">
                     <div class="overlay">
                       <span class="wrap-icon icon-link2"></span>
                       <div class="portfolio-item-content">
@@ -208,7 +208,7 @@
 
               <div class="item web packaging col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
 
-                <a href="images/tango.jpeg" class="portfolio-item isotope-item gsap-reveal-img" data-fancybox="gallery" data-caption="Watch">
+                <a href="images/tango.jpeg" class="portfolio-item isotope-item gsap-reveal-img" data-fancybox="gallery" data-caption="Cultural Venue">
                     <div class="overlay">
                       <span class="wrap-icon icon-photo2"></span>
                       <div class="portfolio-item-content">
@@ -235,7 +235,7 @@
               </div>
 
               <div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-                <a href="images/bombonera4.jpg" class="portfolio-item ajax-load-page item-portrait isotope-item gsap-reveal-img" data-id="2">
+                <a href="images/bombonera4.jpg" class="portfolio-item item-portrait isotope-item gsap-reveal-img" data-fancybox="gallery" data-id="2">
                     <div class="overlay">
                       <span class="wrap-icon icon-link2"></span>
                       <div class="portfolio-item-content">
