--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                 <div class="wrap-icon mb-3">
                   <img src="images/svg/001-options.svg" alt="Image" width="45">
                 </div>
-                <h3>Diseño <br> digital</h3>
+                <h3>Diseño <br> Digital</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. </p>
               </div>
             </div>
@@ -338,7 +338,7 @@
                 <div class="wrap-icon mb-3">
                   <img src="images/svg/002-chat.svg" alt="Icon" width="45">
                 </div>
-                <h3>Asesoramiento <br>de imagen</h3>
+                <h3>Asesoramiento <br>de Imagen</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. </p>
               </div>
             </div>
@@ -347,7 +347,7 @@
                 <div class="wrap-icon mb-3">
                   <img src="images/svg/003-contact-book.svg" alt="Image" class="img-fluid" width="45">
                 </div>
-                <h3>Creación <br> de productos</h3>
+                <h3>Creación <br> de Productos</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. </p>
               </div>
             </div>
@@ -357,7 +357,7 @@
                 <div class="wrap-icon mb-3">
                   <img src="images/svg/004-percentage.svg" alt="Image" width="45">
                 </div>
-                <h3>Diseño de proyectos <br> gastronómicos</h3>
+                <h3>Diseño de Proyectos <br> Gastronómicos</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. </p>
               </div>
             </div>
@@ -366,7 +366,7 @@
                 <div class="wrap-icon mb-3">
                   <img src="images/svg/006-goal.svg" alt="Image" width="45">
                 </div>
-                <h3>Producciones <br> audiovisuales</h3>
+                <h3>Producciones <br> Audiovisuales</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. </p>
               </div>
             </div>
@@ -375,7 +375,7 @@
                 <div class="wrap-icon mb-3">
                   <img src="images/svg/005-line-chart.svg" alt="Image" width="45">
                 </div>
-                <h3>Intercambios <br> culturales</h3>
+                <h3>Intercambios <br> Culturales</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. </p>
               </div>
             </div>
