update typo color

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
             <div class="col-md-7 mx-auto text-center">
               <h1 class="heading gsap-reveal-hero">Somos Inmortables</h1>
-              <h2 class="subheading gsap-reveal-hero">El puente de union para forjar lazos entre la cultura <a href="#">japonesa</a> y la <a href="#">argentina.</h2>
+              <h2 class="subheading gsap-reveal-hero">El puente de union para forjar lazos entre la cultura <a href="#">japonesa</a> y la <span class='arg-underline'>argentina.</span></h2>
             </div>
 
           </div>
@@ -126,7 +126,7 @@
               </figure>
             </div>
             <div class="col-lg-4 pr-lg-5">
-              <h3 class="mb-4 heading-h3"><span class="gsap-reveal">Nuestra principal meta es mantener <a href="#">un lazo unido entre nuestros dos paises.</a></span></h3>
+              <h3 class="mb-4 heading-h3"><span class="gsap-reveal">Nuestra principal meta es mantener <span class='arg-underline-body'>un lazo unido entre nuestros dos paises.</span></h3>
               <p class="lead gsap-reveal">Tendemos lazos con Japón desde hace mas de 30 años. Estamos principalmente enfocados en el <a href="#">intercambio cultural.</a> Representamos una gran cantidad de profesionales calificados y de larga experiencia en las artes gráficas, produccines fotográficas, asesoramiento de imagen, creación de productos, producciones audiovisuales y dirección de proyectos gastronómicos.</p>
               <p class="mb-4 heading-h3">Somos el puente de union para llevar a cabo tus proyectos que impliquen el desarrollo de la <a href="#">cultura japonesa y la cultura argentina.</a></p>
               <p class="gsap-reveal"><a href="#" class="btn btn-outline-pill btn-custom-light">Descarga nuestro folleto</a></p>
@@ -437,7 +437,7 @@
       <div class="unslate_co--section" id="testimonial-section">
         <div class="container">
           <div class="section-heading-wrap text-center mb-5">
-            <h2 class="heading-h2 text-center divider"><span class="gsap-reveal">Nuestro equipo</span></h2>
+            <h2 class="heading-h2-blue text-center divider"><span class="gsap-reveal">Nuestro equipo</span></h2>
           <!--  <span class="gsap-reveal"><img src="images/divider.png" alt="divider" width="76"></span>-->
           </div>
         </div>
@@ -483,7 +483,7 @@
       <div class="unslate_co--section" id="journal-section">
         <div class="container">
           <div class="section-heading-wrap text-center mb-5">
-            <h2 class="heading-h2-red text-center divider"><span class="gsap-reveal">Novedades</span></h2>
+            <h2 class="heading-h2 text-center divider"><span class="gsap-reveal">Novedades</span></h2>
             <!--<span class="gsap-reveal"><img src="images/divider.png" alt="divider" width="76"></span>-->
           </div>
 
@@ -560,7 +560,7 @@
       <div class="unslate_co--section" id="contact-section">
         <div class="container">
           <div class="section-heading-wrap text-center mb-5">
-            <h2 class="heading-h2 text-center divider"><span class="gsap-reveal">Contactanos!</span></h2>
+            <h2 class="heading-h2-red text-center divider"><span class="gsap-reveal">Contactanos!</span></h2>
           <!--  <span class="gsap-reveal"><img src="images/divider.png" alt="divider" width="76"></span>-->
           </div>
 
